--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,14 @@ body {
     text-transform: uppercase;
 
     background-color: #ffffff;
-    background-image: url("img/background-photo.jpg");
+    background-image: url("../img/background-photo.jpg");
     background-position: top center;
     background-repeat: no-repeat;
-  }
+}
+ 
 a {
     text-decoration: none;
-  }
+}
  
 .button {
     font: inherit;
@@ -24,36 +25,26 @@ a {
     vertical-align: middle;
     text-transform: uppercase;
     border: none;
-  }
+}
 
 .button-hotels-search {
     background-color: #766357;
     font-size: 21px;
-    width: 568px;
-    height: 86px;
-
 }
-
 
 .button-search {
     background-color: #81b3d2;
     font-size: 21px;
-    width: 458px;
-    height: 58px;
-
 }   
+
 .button-more {
     background-color: #81b3d2;
     line-height: 21px;
-    width: 110px;
-    height: 27px;
     text-align: left;
 }
 .button-book {
     background-color: #766357;
     line-height: 21px;
-    width: 142px;
-    height: 27px;
     text-align: left;
 }
 .button-hotels-search:hover,
@@ -78,10 +69,6 @@ a {
 .button-more:active  {
       background-color: #5496bd;
       color: rgba(255, 255, 255, 0.3)
-}
-
-
-
 
 }
 .main-navigation {
@@ -91,7 +78,7 @@ a {
   
     background-color: #ffffff;
   }
-.site-navigation {
+.list-reset {
   list-style: none;
 }
 
@@ -123,10 +110,7 @@ a {
 }
 .hotel-search-form input {
     font: inherit;
-  
     background-color: #f2f2f2;
-    width: 346px;
-    height: 38px;
     background-color: #f2f2f2;
 }
 .hotel-search-form input:hover {
@@ -137,7 +121,6 @@ a {
     background-color: #ffffff;
 }
 .main-footer {
-    
     background-color: #f2f2f2;
 }
 
@@ -152,12 +135,8 @@ a {
 }
 .footer-social {
     text-align: center;
-}
-  
-.footer-social ul {
-    list-style: none;
-}
-  
+} 
+
 .social-button {
     background-color: #81b3d2;
     color: #ffffff
@@ -168,7 +147,7 @@ a {
 }
   
 
-.social-button:active  {
+.social-button:focus  {
     background-color: #5496bd;
     color: rgba(255, 255, 255, 0.3)
 }
