--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,36 @@ body {
     text-transform: uppercase;
 
     background-color: #ffffff;
+    box-shadow: inset 0px 5px 15px 0 var(--dark-forest-green--20);
     
    
 }
  
 a {
     text-decoration: none;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .index-picture {
@@ -74,7 +98,8 @@ a {
 .button-search:active,
 .button-more:active  {
       background-color: #5496bd;
-      color: rgba(255, 255, 255, 0.3)
+      color: rgba(255, 255, 255, 0.3);
+      
 
 }
 .main-navigation {
@@ -88,8 +113,16 @@ a {
   list-style: none;
 }
 
+
 .site-navigation-item {
   color: #000000;
+  /*box-shadow: inset 0 0 0 2px rgb(130, 6, 231);*/
+  
+  padding-top: 22px;
+  padding-bottom: 22px;
+
+  
+  
 }
 
 
@@ -126,9 +159,7 @@ a {
     border: solid 2px #e5e5e5;
     background-color: #ffffff;
 }
-.main-footer {
-    background-color: #f2f2f2;
-}
+
 
 .hashtag {
     text-decoration: none;
@@ -138,9 +169,15 @@ a {
 }
 .footer-social {
     text-align: center;
+    
 } 
 
 .social-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 46px;
+    height: 46px;
     background-color: #81b3d2;
     color: #ffffff
 }
@@ -152,21 +189,51 @@ a {
 
 .social-button:focus  {
     background-color: #5496bd;
-    color: rgba(255, 255, 255, 0.3)
-}
-.footer-copyright {
-    text-align: center;
+    color: rgba(255, 255, 255, 0.3);
 }
 
-.htmlacademy-logo{
-    color: #231f20;
+.social-button:focus path {
+  opacity: 0.3;
 }
-.htmlacademy-logo:hover{
-    color: #81b3d2;
+
+.footer-copyright-wrapper {
+    display: flex;
+    
+    min-width: 197px;
+    position: relative;
+        
+    
+
+}
+
+.website {
+    font-weight: 400;
+        
+}
+ 
+   
+    
+
+
+.htmlacademy-logo{
+    
+    position: absolute;
+    bottom: -7px;
+    left: 86px;
+    color: #231f20;
+    width: 115px;
+    height: 41px;
+    
+    padding: 0;
+    margin: 0 auto;
     
 }
-.htmlacademy-logo:focus {
-    color: #bdbbbc;
+.htmlacademy-logo:hover path{
+    fill: #81b3d2;
+    
+}
+.htmlacademy-logo:focus path {
+    fill: #bdbbbc;
   
 }
 /*
@@ -183,6 +250,9 @@ body > * > * > * {background: rgba(0, 255, 255, 0.3);
 .container {
     width: 1200px;
     margin: 0 auto;
+    display: flex;
+
+    
 }
 
 /*
@@ -193,47 +263,77 @@ body > * > * > * {background: rgba(0, 255, 255, 0.3);
     height: 56px;
 }
 */
+
+.main-header-logo {
+    background-color: transparent;
+    
+    position: absolute;
+    left: 530px;
+
+}
+
 .main-navigation {
     display: flex;
-    justify-content: space-between;
-    background-color: #ffffff;
-    margin-bottom: 76px;
+    
    
+    
+
 }
-.container {
-    display: flex;
+
+.main-header {
+    
+    min-height: 56px;
+    margin-bottom: 76px;
+    /*box-shadow: inset 0 0 0 2px rgb(5, 252, 149);*/
+    background-color: #ffffff;
 }
 
 
-
+.main-header-wrapper {
+    width: 1200px;
+    position: relative;
+    margin: 0 auto;
+    
+}
 
 .site-navigation-left {
     order: -1;
     display: flex;
-  
     justify-content: space-between;
-    width: 478px;
-    margin: auto;
     padding: 0;
-    
+    margin-left: 0;
+    width: 600px;
+    /*box-shadow: inset 0 0 0 2px rgb(234, 255, 45);*/
     
 }
+
+.site-navigation-left .site-navigation-item {
+    padding-left: 72px;
+    padding-right: 74px;
+    padding-top: 22px;
+    text-align: center;
+    
+
+}
+
 .site-navigation-right {
     order: 1;
     display: flex;
-  
     justify-content: space-between;
-    width: 478px;
-    margin: auto;
+    width: 600px;
+    margin-right: 0;
     padding: 0;
-    
-
-    
+    /*box-shadow: inset 0 0 0 2px rgb(234, 255, 45);*/
+        
 }
 
-.site-navigation {
-    padding: 0 72px;
+.site-navigation-right .site-navigation-item {
+    padding-left: 72px;
+    padding-right: 74px;
+    padding-top: 22px;
+    text-align: center;
 }
+
 
 
 .greeting {
@@ -242,6 +342,30 @@ body > * > * > * {background: rgba(0, 255, 255, 0.3);
     padding: 0 370px;
     list-style: none;
 }
+
+.polygon {
+    width: 1202px;
+    height: 59px;
+    margin-bottom: -1px;
+    margin-right: -1px;
+    margin-left: -0.5px;  
+    padding: 0;
+   
+}
+
+.city-description {
+    background-color: #ffffff;
+    margin-top: 0;
+    padding-top: 61px;
+   
+   
+}
+
+.reasons-to-visit {
+    background-color: #ffffff;
+    padding-top: 38px;
+}
+
 
 .description-wrapper {
     display: flex;
@@ -258,63 +382,167 @@ body > * > * > * {background: rgba(0, 255, 255, 0.3);
 
 .main-footer {
     padding: 50px 0;
-    margin-top: 78px; 
+    margin-top: 0px; 
+    background-color: #ffffff;
+    
 }
 
 .main-footer .container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
+    
 }
 
 .hashtag {
     margin: 0;
 }
 
-.footer-copyright {
-    margin: 0;
-}
+
+
+
 
 .social-button-wrapper {
     display: flex;
-  
+    flex-wrap: wrap;  
     justify-content: space-between;
-    width: 200px;
-    margin: auto;
+    width: 150px;
+    margin: 0 auto;
     padding: 0;
 }
-
+/*
 .hotels-list-wrapper {
     display: flex;
-    flex-direction: column;
-    align-content: space-between;
+    flex-wrap: wrap;
+    
+    
+    justify-content: space-between;
     margin: 0;
     padding: 0;
-    margin-bottom: 31px; 
-  
-    width: 1200px;
     
+  
+    width: 100%;
+    box-shadow: inset 0 0 0 2px rgb(14, 15, 0);
+    
+}
+*/
+
+.hotels-list {
+    display: flex;
+    flex-direction: column;
+    
+    
+ 
+    margin: 0 auto;
 }
 
 .hotels-list-item-wrapper {
     display: flex;    
-    justify-content: space-around;
- 
+    justify-content: flex-start;
+   
+    margin-top: 30px;
+    margin-bottom: 30px;   
+    padding: 0;
     
- 
     
     
 }
+
 
 .hotels-list-picture {
-    order: -1;
-    width: 207px;
+    /*order: -1;*/
+    
+    width: 135px;
+    height: 90px;
+
+    margin-right: 30px;
+    
+    padding: 0;
 }
 
-.hotels-list-raiting {
-    margin-left: 200px;
+.hotels-list-rating {
+    /*margin-right: 73px;*/
+    /*display: block;*/
+   
+    padding: 0;
+    margin-right: 73px;
+    position: relative;
    
 }
 .hotels-list-name {
+    /*margin-left: 0px;
+    margin-right: 400px;*/
    
-    margin-right: 400px;
+    padding: 0;
+    margin-right: 522px;
 }
+
+.rating-back {
+    display: block;
+    
+    
+    
+    background-color: #f2f2f2;
+    line-height: 21px;
+    font-weight: 400;
+    color: #666666;
+    
+    
+    padding-top: 5px;
+    padding-bottom: 6px;
+    padding-left: 16px;
+    padding-right: 13px;
+    margin-top: 93px;
+    
+   
+} 
+
+.rating-back::before {
+    content: "";
+  
+    width: 18px;
+    height: 17px;
+    position: absolute;
+    top: 29px;
+    left: 93px;
+    background-image: url("../img/star.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+
+    
+}
+.rating-back::after {
+    content: "";
+  
+    width: 18px;
+    height: 17px;
+    position: absolute;
+    top: 29px;
+    left: 70px;
+    background-image: url("../img/star.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+
+    
+}
+
+
+.button-more {
+    width: 110px;
+    padding-top: 7px;
+    padding-bottom: 6px;
+    padding-left: 16px;
+    padding-right: 16px;
+    margin-right: 6px;
+}
+
+.button-book {
+    width: 142px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-right: 0px;
+}
+
+
